--- a/web/mypage.html
+++ b/web/mypage.html
@@ -1,12 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>
-        Title
-    </title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-<p>My first site</p>
+        My PAAAAGEEE!!11133333333333333333333333333333333333
 </body>
 </html>
